# openhands-project-start

./: .env.example  .env.sample  .openhands_instructions  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
accounts/: models.py  serializers.py  views.py
accounts/tests/: test_views.py
auth_system/: settings.py
authentication/: models.py  serializers.py  tests.py  urls.py  views.py
core/: settings.py  urls.py
user_auth_system/: manage.py
user_auth_system/user_auth_system/: asgi.py  settings.py  wsgi.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py
